[gd_scene load_steps=29 format=3 uid="uid://cynuw703np806"]

[ext_resource type="Texture2D" uid="uid://b236uirhjy7hn" path="res://assets/folder_spritesheet.png" id="1_ektu6"]
[ext_resource type="Script" uid="uid://cj5l5od4qi8hd" path="res://src/board/game_folder.gd" id="2_bdcow"]
[ext_resource type="Script" uid="uid://dirlck8cndbxf" path="res://src/board/grid_snapper.gd" id="3_vnptg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ektu6"]
size = Vector2(128, 111)

[sub_resource type="Animation" id="Animation_ektu6"]
resource_name = "neutral"
length = 2.00001
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0.0, -0.10471975511965978, -0.08726646259971647, -0.10471975511965978, 0.10471975511965978, 0.08726646259971647]
}

[sub_resource type="Animation" id="Animation_bdcow"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vnptg"]
_data = {
&"RESET": SubResource("Animation_bdcow"),
&"neutral": SubResource("Animation_ektu6")
}

[sub_resource type="Animation" id="Animation_sm7p4"]
resource_name = "neutral"
length = 0.50001
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_gqtao"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_aln04"]
resource_name = "to warning"
length = 0.60001004
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 4]
}

[sub_resource type="Animation" id="Animation_dbonf"]
resource_name = "warning"
length = 0.10001
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_vnptg"]
resource_name = "to defeat"
length = 0.40001002
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_ke2pw"]
resource_name = "defeat"
length = 0.10001
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ke2pw"]
_data = {
&"RESET": SubResource("Animation_gqtao"),
&"defeat": SubResource("Animation_ke2pw"),
&"neutral": SubResource("Animation_sm7p4"),
&"to defeat": SubResource("Animation_vnptg"),
&"to warning": SubResource("Animation_aln04"),
&"warning": SubResource("Animation_dbonf")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6s4mj"]
animation = &"defeat"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_w1osx"]
animation = &"neutral"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_677k3"]
animation = &"to defeat"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ajdan"]
animation = &"to warning"
play_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6iwbj"]
animation = &"to warning"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ldy8f"]
animation = &"warning"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vbxmt"]
advance_mode = 2
advance_expression = "current_state == FOLDER_TYPE.INFECTED"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0y1fu"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2bayo"]
advance_mode = 2
advance_expression = "current_state == FOLDER_TYPE.DEFEATED"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_nemwc"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_66vkn"]
advance_mode = 2
advance_expression = "current_state == FOLDER_TYPE.NEUTRAL"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_e37aj"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ektu6"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_6s4mj"]
states/End/position = Vector2(1099, 100)
states/defeat/node = SubResource("AnimationNodeAnimation_6s4mj")
states/defeat/position = Vector2(956, 100)
states/neutral/node = SubResource("AnimationNodeAnimation_w1osx")
states/neutral/position = Vector2(329, 100)
"states/to defeat/node" = SubResource("AnimationNodeAnimation_677k3")
"states/to defeat/position" = Vector2(801, 100)
"states/to neutral/node" = SubResource("AnimationNodeAnimation_ajdan")
"states/to neutral/position" = Vector2(403, -15)
"states/to warning/node" = SubResource("AnimationNodeAnimation_6iwbj")
"states/to warning/position" = Vector2(494, 100)
states/warning/node = SubResource("AnimationNodeAnimation_ldy8f")
states/warning/position = Vector2(650, 100)
transitions = ["neutral", "to warning", SubResource("AnimationNodeStateMachineTransition_vbxmt"), "to warning", "warning", SubResource("AnimationNodeStateMachineTransition_0y1fu"), "warning", "to defeat", SubResource("AnimationNodeStateMachineTransition_2bayo"), "to defeat", "defeat", SubResource("AnimationNodeStateMachineTransition_nemwc"), "to warning", "to neutral", SubResource("AnimationNodeStateMachineTransition_66vkn"), "to neutral", "neutral", SubResource("AnimationNodeStateMachineTransition_e37aj"), "Start", "neutral", SubResource("AnimationNodeStateMachineTransition_ektu6")]
graph_offset = Vector2(-26, -90)

[node name="GameFolder" type="Node2D"]
script = ExtResource("2_bdcow")

[node name="GridSnapper" type="Node2D" parent="."]
script = ExtResource("3_vnptg")
tile_size = Vector2(32, 32)

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(8, 8)
texture = ExtResource("1_ektu6")
hframes = 8

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -7.5)
shape = SubResource("RectangleShape2D_ektu6")

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 72.0
offset_top = -59.0
offset_right = 115.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
value = 100.0
fill_mode = 3
show_percentage = false

[node name="IdleAnim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_vnptg")
}

[node name="DamageStates" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ke2pw")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_6s4mj")
advance_expression_base_node = NodePath("..")
anim_player = NodePath("../DamageStates")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_mouse_exited"]
